# Interactive-Predicate-Learning

./: MANIFEST.in  pixi.toml  pyproject.toml
predicate_learning/predicate_gym/Kitchen2D/kitchen2d/: motion_planner.py
predicate_learning/utils/: common_util.py  llm_util.py
